[gd_scene load_steps=6 format=3 uid="uid://cbfigu64qfdvf"]

[ext_resource type="Script" path="res://scripts/ui/menu.gd" id="1_833i5"]
[ext_resource type="Texture2D" uid="uid://ck3vocomisktb" path="res://assets/ui/cover_image.png" id="2_yw33v"]
[ext_resource type="PackedScene" uid="uid://b6j6utnkndtjo" path="res://scenes/options/options_menu.tscn" id="3_nre05"]
[ext_resource type="Script" path="res://scripts/ui/button_with_sfx.gd" id="3_q60to"]
[ext_resource type="PackedScene" uid="uid://bnaykxnl0tv10" path="res://scenes/ui/credits.tscn" id="7_0vgrq"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_833i5")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.604
anchor_bottom = 0.21
offset_right = -346.56
offset_bottom = -35.6
texture = ExtResource("2_yw33v")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 469.0
offset_top = 182.0
offset_right = 629.0
offset_bottom = 342.0
theme_override_constants/separation = 0

[node name="StartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Start"
script = ExtResource("3_q60to")

[node name="OptionButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Options"
script = ExtResource("3_q60to")

[node name="AcheivementsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Achievements"
script = ExtResource("3_q60to")

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Credits"
script = ExtResource("3_q60to")

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Quit"
script = ExtResource("3_q60to")

[node name="OptionsMenu" parent="." instance=ExtResource("3_nre05")]
visible = false
layout_mode = 1

[node name="Credits" parent="." instance=ExtResource("7_0vgrq")]
visible = false

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="VBoxContainer/AcheivementsButton" to="." method="_on_acheivements_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="close_options" from="OptionsMenu" to="." method="show_buttons"]
[connection signal="close_credits" from="Credits" to="." method="show_buttons"]
